# ai-game-arena

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
ai-backend/: .env.example  ai_poker_arena.json  package-lock.json  package.json
ai-backend/src/: hand-eval.ts  index.ts  poker-client.ts
ai-backend/src/agents/: base.ts  claude.ts  gemini.ts  gpt4.ts  llama.ts  mistral.ts  openrouter.ts
app/frontend/: package-lock.json  package.json
app/frontend/src/app/: globals.css  layout.tsx  page.tsx
app/frontend/src/components/: AIAvatar.tsx  AIPlayerSeat.tsx  PokerCard.tsx  PokerTable.tsx  PredictionMarket.tsx  TableChat.tsx  TournamentLog.tsx  TransactionFeed.tsx  WalletAwarePredictionMarket.tsx  WalletButton.tsx  WalletProvider.tsx
app/frontend/src/hooks/: useAIVoice.ts
app/frontend/src/lib/: constants.ts  idl.json  market-client.ts  market-tx.ts
app/frontend/src/types/: playing-cards.d.ts
programs-ecs/components/game-state/: Cargo.toml
programs-ecs/components/game-state/src/: lib.rs
programs-ecs/components/player-state/: Cargo.toml
programs-ecs/components/player-state/src/: lib.rs
programs-ecs/systems/game-action/: Cargo.toml
programs-ecs/systems/game-action/src/: lib.rs
programs/ai-poker-arena/: Cargo.toml
programs/ai-poker-arena/src/: constants.rs  errors.rs  lib.rs  poker.rs  state.rs
tests/: ai-poker-arena.ts
