[package]
name = "ai-poker-arena"
version = "0.1.0"
description = "AI Poker Arena - 5 AI models play poker tournaments on Solana with MagicBlock"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ai_poker_arena"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
ephemeral-rollups-sdk = { version = "0.8", features = ["anchor"] }
