[package]
name = "player-state"
version = "0.1.0"
description = "BOLT ECS Component: AI Player State"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "player_state"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
